# ftml

./: LICENSE  README.md  pyproject.toml  tox.ini
dev/: naming_guide.md  versioning_guide.md
doc/: ftml_parsing.md  ftml_schema_syntax.md
docs/: api.md  collections.md  comments.md  constraints.md  datetime.md  doc_schema_development_guide.md  ftml_schema_parser_specification.md  parser.md  scalars.md  structure.md  unions_enums.md  versioning_encoding_specification.md
src/ftml/: __init__.py  document.py  exceptions.py  ftml_core.py  ftml_data.py  ftml_dict.py  logger.py  parser.py  schema.py  serializer.py  tokenizer.py  validator.py  version.py
src/ftml/parser/: __init__.py  ast.py  ast_visualizer.py  comment_attacher.py  encoding.py  parser.py  serializer.py  tokenizer.py
src/ftml/schema/: __init__.py  schema.py  schema_ast.py  schema_debug.py  (+8 more)
tests/: test_basic_parsing.py  test_comments.py  test_nested_structures.py  test_roundtrip.py  test_tdd.py  test_top_scalars.py  test_type_inference.py
tests/classes/: test_ftml_parser.py
tests/old/: test_ftml.py
tests/parser/: test_encoding.py  test_verioning.py
tests/public_api/: test_api.py  test_dump.py  test_load.py
tests/schema/: readme.txt  test_basic_inference.py  test_collections.py  test_constraints.py  test_datatime_types.py  test_default_values.py  test_error_handling.py  test_nested_structures.py  test_optional_defaults.py  test_optional_fields.py  test_schema_parser.py  test_type_safety.py  test_union_types.py
tests/types/: test_bool.py  test_floats.py  test_int.py  test_null.py  test_str.py
(+30 files in other folders)
