[tool.poetry]
name = "ftml"
version = "0.1.0"
description = ""
authors = ["DarrenHaba <darrenhaba@live.com>"]
readme = "README.md"
packages = [{ include = "ftml", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

